    (e.g., --cfg=network/optim:lazy --cfg=cpu/optim:TI).
    Incompatible combinations should err at initialization. See
    --help-models for the list of all models and optimization modes.
  * The CLM03 workstation model were dropped for simplicity because it
    used the deprecated CM02 network model. Use default instead.
  * Rename the TCP_gamma configuration option to network/TCP_gamma
  * Use now crosstraffic keyword instead of the terribly missleading 
    fullduplex keyword. Use --cfg=network/crosstraffic:1. This is
    activated by default now in the current default model.
    
  SimDag:
  * Performance boost by using a swag internally to compute the set of
    tasks that are finished and should constitute the return value of
    SD_simulate.

  XBT:
  * Mallocators: allow value NULL for the reset function.
  * Dicts: new function xbt_dict_new_homogeneous(void(*)(void*)) to
    create homogeneous dictionaries, where all the elements share the
    same free function.

  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.6.2) stable; urgency=low

 The "Not coding new stuff allows to polish old things" release.

 General
 * New bindings to the NS3 packet level simulator (experimental)
 * Use the raw (efficient) execution contextes instead of the sysv
   (portable) ones when possible.
 * libpcre is now mandatory in any cases since not using it led to
    severe performance loss and possibly other issues
 * Update the XML platforms:
   - G5K: include the lastest machine in Nancy
   - GridPP and LCG: new platforms
 * Documentation was partially updated, at least (more to come)

 Bug fixes, cosmetics and small improvements
 * Free terminated processes before the end of the simulation to avoid
   exhausting the memory of users having very dynamic amount of
   processes.
 * Bug fix and cosmetics about canceling non-running tasks
 * Bug fix about the dot loader's issues when using libcgraph

 Portability