@@ -3,7 +3,7 @@
 <platform version="3">
 
 <config id="General">
-	<prop id="coordinates" value="yes"></prop>
+	<prop id="network/coordinates" value="yes"></prop>
 </config>
 
 	<AS  id="AS0"  routing="Vivaldi">
